--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "react-amplify-gen2",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.6",
-    "aws-amplify": "^6.0.28",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@aws-amplify/backend": "^0.13.0-beta.15",
-    "@aws-amplify/backend-cli": "^0.12.0-beta.17",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "aws-cdk": "^2.137.0",
-    "aws-cdk-lib": "^2.137.0",
-    "constructs": "^10.3.0",
-    "esbuild": "^0.20.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.0"
-  }
+    "name": "saas-landingpage-react-ts",
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "amp": "amplify sandbox --profile amplify-admin"
+    },
+    "dependencies": {
+        "@aws-amplify/ui-react": "^6.1.6",
+        "aws-amplify": "^6.0.28",
+        "card3d": "^2.6.5",
+        "daisyui": "^4.4.19",
+        "lucide-react": "^0.294.0",
+        "react": "^18.2.0",
+        "react-daisyui": "^5.0.0",
+        "react-dom": "^18.2.0",
+        "react-use": "^17.5.0"
+    },
+    "devDependencies": {
+        "@aws-amplify/backend": "^0.13.0-beta.15",
+        "@aws-amplify/backend-cli": "^0.12.0-beta.17",
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "path": "^0.12.7",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.9",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8"
+    }
 }
