--- a/package.json
+++ b/package.json
@@ -7,22 +7,30 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "amp": "amplify sandbox --profile amplify-admin"
+        "amp": "ampx sandbox --profile amplify-admin",
+        "login": "aws configure sso"
     },
     "dependencies": {
-        "@aws-amplify/ui-react": "^6.1.6",
-        "aws-amplify": "^6.0.28",
+        "@aws-amplify/ui-react": "^6.1.9",
+        "@hookform/resolvers": "^3.3.4",
+        "@tanstack/react-router": "^1.31.2",
+        "aws-amplify": "^6.2.0",
         "card3d": "^2.6.5",
         "daisyui": "^4.4.19",
         "lucide-react": "^0.294.0",
         "react": "^18.2.0",
         "react-daisyui": "^5.0.0",
         "react-dom": "^18.2.0",
-        "react-use": "^17.5.0"
+        "react-hook-form": "^7.51.3",
+        "react-use": "^17.5.0",
+        "ts-pattern": "^5.1.1",
+        "zod": "^3.23.4"
     },
     "devDependencies": {
-        "@aws-amplify/backend": "^0.13.0-beta.15",
-        "@aws-amplify/backend-cli": "^0.12.0-beta.17",
+        "@aws-amplify/backend": "^0.15.1",
+        "@aws-amplify/backend-cli": "^0.16.0",
+        "@tanstack/router-devtools": "^1.31.2",
+        "@tanstack/router-vite-plugin": "^1.30.0",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
