--- a/package.json
+++ b/package.json
@@ -7,28 +7,41 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "start": "ampx sandbox --profile amplify-admin",
-        "login": "aws configure sso"
+        "start": "ampx sandbox --profile sso-amplify-proto",
+        "login": "aws configure sso",
+        "secret": "ampx sandbox --profile sso-amplify-proto secret set"
     },
     "dependencies": {
         "@aws-amplify/ui-react": "^6.1.9",
         "@hookform/resolvers": "^3.3.4",
+        "@nextui-org/react": "^2.3.6",
+        "@react-stately/data": "^3.11.3",
+        "@stripe/react-stripe-js": "^2.7.0",
+        "@stripe/stripe-js": "^3.3.0",
+        "@tanstack/react-query": "^5.32.1",
         "@tanstack/react-router": "^1.31.2",
         "aws-amplify": "^6.2.0",
         "card3d": "^2.6.5",
+        "clsx": "^2.1.1",
         "daisyui": "^4.4.19",
+        "framer-motion": "^11.1.7",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.294.0",
         "react": "^18.2.0",
         "react-daisyui": "^5.0.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
         "react-use": "^17.5.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animated": "^1.0.1",
         "ts-pattern": "^5.1.1",
+        "usehooks-ts": "^3.1.0",
         "zod": "^3.23.4"
     },
     "devDependencies": {
         "@aws-amplify/backend": "^1.0.0",
         "@aws-amplify/backend-cli": "^1.0.0",
+        "@iconify/react": "^4.1.1",
         "@tanstack/router-devtools": "^1.31.4",
         "@tanstack/router-vite-plugin": "^1.30.0",
         "@types/react": "^18.2.43",
@@ -43,6 +56,7 @@
         "path": "^0.12.7",
         "prettier": "^3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.9",
+        "stripe": "^15.5.0",
         "tailwindcss": "^3.3.6",
         "typescript": "^5.2.2",
         "vite": "^5.0.8"
