--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-daisyui": "^5.0.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-hook-form-persist": "^3.0.0",
         "react-use": "^17.5.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animated": "^1.0.1",
