--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview",
         "start": "ampx sandbox --profile sso-amplify-proto",
         "login": "aws configure sso",
-        "secret": "ampx sandbox --profile sso-amplify-proto secret set"
+        "secret": "ampx sandbox --profile sso-amplify-proto secret set",
+        "check": "tsc --noEmit"
     },
     "dependencies": {
         "@aws-amplify/ui-react": "^6.1.9",
