--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@aws-amplify/backend": "^1.0.0",
         "@aws-amplify/backend-cli": "^1.0.0",
         "@iconify/react": "^4.1.1",
+        "@tailwindcss/typography": "^0.5.13",
         "@tanstack/router-devtools": "^1.31.4",
         "@tanstack/router-vite-plugin": "^1.30.0",
         "@types/react": "^18.2.43",
