--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start": "ampx sandbox --profile sso-amplify-proto",
         "login": "aws configure sso",
         "secret": "ampx sandbox --profile sso-amplify-proto secret set",
-        "check": "tsc --noEmit"
+        "check:code": "tsc --noEmit && npm run check:code --prefix amplify"
     },
     "dependencies": {
         "@aws-amplify/ui-react": "^6.1.9",
@@ -57,6 +57,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "path": "^0.12.7",
+        "postgrid-node-client": "^0.11.0",
         "prettier": "^3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.9",
         "stripe": "^15.5.0",
