--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start": "ampx sandbox --profile sso-amplify-proto",
         "login": "aws configure sso",
         "secret": "ampx sandbox --profile sso-amplify-proto secret set",
-        "generate": "ampx generate --profile sso-amplify-proto graphql-client-code --out amplify/function/stripe/graphql",
+        "generate": "ampx generate --profile sso-amplify-proto graphql-client-code --out amplify/graphql",
         "check:code": "tsc --noEmit && npm run check:code --prefix amplify"
     },
     "dependencies": {
